--- a/assets/style.css
+++ b/assets/style.css
@@ -12,8 +12,56 @@ body {
 	text-align: center; 
 }
 
-.aboutme_link {
+.aboutme_link, .label {
 	color: black;
+
+}
+
+div.row1, div.row2, div.row3 {
+	height: 275px;
+	width: 1250px;
+}
+
+.cardContainer {
+    width: 200px;
+    height: 260px;
+    position: relative;
+    perspective: 800px;
+    display: inline-block;
+}
+
+.card {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    transition: transform 1s;
+    transform-style: preserve-3d;
+}
+
+.card div {
+    display: block;
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    backface-visibility: hidden;
+}
+
+.card .front {
+
+}
+
+.card .back {
+    -webkit-transform: rotateY( 180deg );
+    transform: rotateY( 180deg );
+}
+
+.card .front, .card .back, .back img, .front img {
+	width: 161px;
+	height: 239px;
+}
+
+.card.flipped {
+    transform: rotateY( 180deg );
 }
 
 /************************************/
