--- a/assets/style.css
+++ b/assets/style.css
@@ -1,3 +1,7 @@
+/*************************/
+/* CSS Styling for Game **/
+/*************************/
+
 body {
 	width: 1500px;
 	height: 750px;
@@ -23,11 +27,12 @@ div.row1, div.row2, div.row3 {
 }
 
 .cardContainer {
-    width: 200px;
-    height: 260px;
+    width: 161px;
+    height: 239px;
     position: relative;
     perspective: 800px;
     display: inline-block;
+    margin: 5px 15px;
 }
 
 .card {
@@ -51,7 +56,6 @@ div.row1, div.row2, div.row3 {
 }
 
 .card .back {
-    -webkit-transform: rotateY( 180deg );
     transform: rotateY( 180deg );
 }
 
@@ -64,8 +68,13 @@ div.row1, div.row2, div.row3 {
     transform: rotateY( 180deg );
 }
 
+footer {
+    width: 100%;
+    background-color: rgb(58,48,50);
+}
+
 /************************************/
-/* CSS Styling for About Me Page */
+/** CSS Styling for About Me Page ***/
 /************************************/
 
 .skills {
@@ -76,23 +85,3 @@ div.row1, div.row2, div.row3 {
 	margin: 0 auto;
 	opacity: 0.8;
 }
-
-
-/* colors
-https://designschool.canva.com/blog/website-color-schemes/
-
-modern and clean
-sky #caebf2
-carbon #a9a9a9
-watermelon #ff3b3f
-neutral #efefef
-
-cheerful and sleek
-blueberry #6b7a8f
-apricot #f7882f
-citrus #f7c331
-applecore #dcc7aa
-
-additional font:
-font-family: 'Patrick Hand SC', cursive;
-*/
