--- a/assets/style.css
+++ b/assets/style.css
@@ -3,8 +3,8 @@
 /*************************/
 
 body {
-	width: 1500px;
-	height: 750px;
+	width: 100vw;
+	height: 100vh;
 	margin: 0 auto;
 	background: url("pictures/background4.jpg") no-repeat center;
 	background-size: cover;
@@ -16,23 +16,54 @@ body {
 	text-align: center; 
 }
 
+header {
+    height: 13vh;
+}
+
+.main_section {
+    height: 75%;
+    width: 90%;
+    margin: 0 7%;
+    display: inline-block;
+}
+
+.sidebar, .game-area {
+    display: inline-block;
+    vertical-align: text-top;
+    height: 100%;
+}
+
+.game-area{
+    display: inline-block;
+    width: 75%;
+    height: 80%;
+    margin: 1% 2%;
+}
+
+.sidebar {
+    display: inline-block;
+    width: 13%;
+    height: 100%;
+    margin: 0 2%;
+}
+
 .aboutme_link, .label {
 	color: black;
-
 }
 
 div.row1, div.row2, div.row3 {
-	height: 275px;
-	width: 1250px;
+	height: 35%;
+	width: 90%;
+    margin: 1% 4%;
 }
 
 .cardContainer {
-    width: 161px;
-    height: 239px;
+    width: 12%;
+    height: 100%;
     position: relative;
     perspective: 800px;
     display: inline-block;
-    margin: 5px 15px;
+    margin: 1% 1%;
 }
 
 .card {
@@ -51,17 +82,13 @@ div.row1, div.row2, div.row3 {
     backface-visibility: hidden;
 }
 
-.card .front {
-
-}
-
 .card .back {
     transform: rotateY( 180deg );
 }
 
-.card .front, .card .back, .back img, .front img {
-	width: 161px;
-	height: 239px;
+.back img, .front img {
+	width: 100%;
+	height: 100%;
 }
 
 .card.flipped {
