--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -6,7 +6,7 @@ body {
 	width: 100vw;
 	height: 100vh;
 	margin: 0 auto;
-	background: url("pictures/background4.jpg") no-repeat center;
+	background: url("../pictures/background4.jpg") no-repeat center;
 	background-size: cover;
 	color: black;
 	font-family: 'Bree Serif', serif;
@@ -89,6 +89,7 @@ div.row {
 .back img, .front img {
 	width: 100%;
 	height: 100%;
+    opacity: 0.95;
 }
 
 .card.flipped {
