--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -6,9 +6,9 @@ body {
 	width: 100vw;
 	height: 100vh;
 	margin: 0 auto;
-	background: url("../pictures/background4.jpg") no-repeat center;
+	background: url("../pictures/background2.jpg") no-repeat center;
 	background-size: cover;
-	color: black;
+	color: rgba(255, 255, 255, 0.8);
 	font-family: 'Bree Serif', serif;
 }
 
@@ -42,18 +42,19 @@ header {
 
 .sidebar {
     display: inline-block;
-    width: 13%;
+    width: 10%;
     height: 100%;
     margin: 0 2%;
+    font-size: 1em;
 }
 
 .aboutme_link, .label {
-	color: black;
+	color: rgba(255, 255, 255, 0.8);
 }
 
 div.row {
 	height: 100%;
-	width: 90%;
+	width: 90%;   
     margin: 1% 4%;
 }
 
@@ -82,14 +83,21 @@ div.row {
     backface-visibility: hidden;
 }
 
-.card .back {
-    transform: rotateY( 180deg );
+.back img, .front img {
+    width: 100%;
+    height: 100%;
+    opacity: 0.95;
 }
 
-.back img, .front img {
-	width: 100%;
-	height: 100%;
-    opacity: 0.95;
+/* front pane, placed above back */
+.front {
+    z-index: 2;
+    /* for firefox 31 */
+    transform: rotateY(0deg);
+}
+
+.back, {
+    transform: rotateY( 180deg );
 }
 
 .card.flipped {
